fix: fixes weird z-index piece & square bug

--- a/src/components/Board/Square/Square.css
+++ b/src/components/Board/Square/Square.css
@@ -2,7 +2,6 @@
   position: relative;
   height: 5vw;
   width: 5vw;
-  z-index: 1;
 }
 
 .square-svg {
